# sticho

./: README.md  pyproject.toml
service/: __init__.py  about.py  cfg.py  qry.py  run.py
service/middleware/: __init__.py  auth.py
service/schemas/: common.py
tests/: __init__.py  test_graphql.py
